Changed index.html because of Introducing Block Elements Section of the HTML section of Intro to Web Development

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <html>
     <head>
         <title>
-            Hello World
+            Matt Calvert - Portfolio
         </title>
     </head>
     <body>
-        Hello World!
+        <h1>Matt Calvert</h1>
+        <h2>About Me</h2>
+        <p>
+            I am an Analyst for Humana and have 0 experience in Software Development.
+        </p>
+        <h2>Past Experiences</h2>
+        <p>
+            Health Insurance, Liquor Distributor, Reference Cigarette Program
+        </p>
+        <h2>Hobbies</h2>
+        <p>
+            Running, Lifting, Playing Sports, Crying about UK Football.
+        </p>
     </body>
 </html>
