Added picture folder and more things to index for HTML section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>Matt Calvert</h1>
         <h2>About Me</h2>
         <p>
+            <img src="images/Me.jpg" style="width: 150px" /><br/>
             I am an Analyst for Humana and have 0 experience in Software Development.
         </p>
         <h2>Past Experiences</h2>
@@ -20,5 +21,10 @@
         <p>
             Running, Lifting, Playing Sports, Crying about UK Football.
         </p>
+        <footer>
+            <a href="http://www.thesoftwareguild.com"><img src="images/SoftwareGuildLogo.png" /></a><br/>
+            To learn to build a site like this one, visit <a href="http://www.thesoftwareguild.com">
+            The Software Guild.</a>
+        </footer>
     </body>
 </html>
