--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         </title>
     </head>
     <body>
+        <h3>Navigation</h3>
+        <a href="skills.html">Skills</a>
         <h1>Matt Calvert</h1>
         <h2>About Me</h2>
         <p>
